* Fix some sections not collapsing by default in mobile (#33)
* Fluid Wagon Section Updates
* Train Speed Table Update
* Add more tips
* Add clarifications to varipus sections

--- a/src/global-styles/_card.scss
+++ b/src/global-styles/_card.scss
@@ -12,7 +12,6 @@
 
     .card-title {
         display: inline-block;
-        vertical-align: middle;
         margin: 0;
     }
 
