--- a/src/global-styles/styles.scss
+++ b/src/global-styles/styles.scss
@@ -58,6 +58,11 @@ h1 {
     }
 }
 
+h5 {
+    font-family: 'Jura', sans-serif;
+    font-weight: bold;
+}
+
 img {
     margin-bottom: 10px;
 }
